--- a/Ansible/vpc-setup.yml
+++ b/Ansible/vpc-setup.yml
@@ -3,7 +3,7 @@
   gather_facts: False
   task:
     - name: Import VPC Variables
-      include_vars: vars/vpc-setup
+      include_vars: vars/vpc_setup
 
     - name: Create vprofile VPC
       ec2_vpc_net:
