--- a/Ansible/vpc-setup.yml
+++ b/Ansible/vpc-setup.yml
@@ -1,7 +1,7 @@
-- hosts: 172.31.9.249
+- hosts: localhost
   connection: local
   gather_facts: False
-  task:
+  tasks:
     - name: Import VPC Variables
       include_vars: vars/vpc_setup
 
@@ -14,4 +14,4 @@
         dns_hostnames: yes
         tenancy: default
         state: "{{state}}"
-        register: vpcout
+      register: vpcout
