--- a/Ansible/vpc-setup.yml
+++ b/Ansible/vpc-setup.yml
@@ -41,6 +41,7 @@
         map_public: yes
         resource_tags:
           Name: vprofile-pubsub2
+      register: pubsub2_out
 
     - name: create Public Subnet 3 in Zone1
       ec2_vpc_subnet:
@@ -52,3 +53,40 @@
         map_public: yes
         resource_tags:
           Name: vprofile-pubsub3
+      register: pubsub3_out
+
+    - name: create Private Subnet 1 in Zone1
+      ec2_vpc_subnet:
+        vpc_id: "{{vpcout.vpc.id}}"
+        region: "{{region}}"
+        az: "{{zone1}}"
+        state: "{{state}}"
+        cidr: "{{PrivSub1Cidr}}"
+        map_public: yes
+        resource_tags:
+          Name: vprofile-pubsub1
+      register: privsub1_out
+
+    - name: create Public Subnet 2 in Zone1
+      ec2_vpc_subnet:
+        vpc_id: "{{vpcout.vpc.id}}"
+        region: "{{region}}"
+        az: "{{zone2}}"
+        state: "{{state}}"
+        cidr: "{{PrivSub2Cidr}}"
+        map_public: yes
+        resource_tags:
+          Name: vprofile-pubsub2
+      register: privsub2_out
+
+    - name: create Public Subnet 3 in Zone1
+      ec2_vpc_subnet:
+        vpc_id: "{{vpcout.vpc.id}}"
+        region: "{{region}}"
+        az: "{{zone3}}"
+        state: "{{state}}"
+        cidr: "{{PrivSub3Cidr}}"
+        map_public: yes
+        resource_tags:
+          Name: vprofile-pubsub3
+      register: privsub3_out
