IGW, mistake corrected

--- a/Ansible/vpc-setup.yml
+++ b/Ansible/vpc-setup.yml
@@ -95,7 +95,7 @@
       ec2_vpc_igw:
         vpc_id: "{{vpcout.vpc.id}}"
         region: "{{region}}"
-        state: "{{state}"
+        state: "{{state}}"
         resource_tags:
           Name: vprofile_igw
       register: igw_out
