--- a/Ansible/vpc-setup.yml
+++ b/Ansible/vpc-setup.yml
@@ -104,8 +104,8 @@
       ec2_vpc_route_table:
         vpc_id: "{{vpcout.vpc.id}}"
         region: "{{region}}"
-#        tags:
-#          Name: Vprofile-PubRT
+        tags:
+          Name: Vprofile-PubRT
         subnets:
           - "{{pubsub1_out.subnet.id}}"
           - "{{pubsub2_out.subnet.id}}"
