--- a/Ansible/vpc-setup.yml
+++ b/Ansible/vpc-setup.yml
@@ -143,4 +143,17 @@
       register: privRT_out
 
     - debug:
-        var: vpcout
+        var: ""{{item}}""
+      loop:
+        - vpcout.vpc.id
+        - pubsub1_out.subnet.id
+        - pubsub2_out.subnet.id
+        - pubsub3_out.subnet.id
+        - privsub1_out.subnet.id
+        - privsub2_out.subnet.id
+        - privsub3_out.subnet.id
+        - igw_out.gateway_id
+        - pubRT_out.subnet.id
+        - NATGW_out.nat_gateway_id
+        - privRT_out.nat_gateway_id
+
