Print ids with corrections

--- a/Ansible/vpc-setup.yml
+++ b/Ansible/vpc-setup.yml
@@ -143,7 +143,7 @@
       register: privRT_out
 
     - debug:
-        var: ""{{item}}""
+        var: "{{item}}"
       loop:
         - vpcout.vpc.id
         - pubsub1_out.subnet.id
