--- a/Ansible/bastion-instance.yml
+++ b/Ansible/bastion-instance.yml
@@ -53,4 +53,5 @@
             Project: Vprofile
             Owner: DevOps Team
           group_id: "{{BastionSG_out.group.id}}"
+          vpc_subnet_id: "{{pubsub1id}}"
         register: bastionHost_out
