--- a/Ansible/bastion-instance.yml
+++ b/Ansible/bastion-instance.yml
@@ -17,10 +17,11 @@
       register: key_out
 
     - name: Save private key into file bastion-key.pem
-          copy:
-            content: "{{key_out.key.private_key}}"
-            dest: "./bastion-key.pem"
-          when: key_out.changed
+      copy:
+        content: "{{key_out.key.private_key}}"
+        dest: "./bastion-key.pem"
+        mode: 0600
+      when: key_out.changed
 
     - name: Create Sec Grp for bastion host
       ec2_group:
