--- a/Ansible/bastion-instance.yml
+++ b/Ansible/bastion-instance.yml
@@ -49,7 +49,7 @@
           Project: Vprofile
           Owner: DevOps Team
         exact_count: 1
-        count_tag: DevOps Team
+        count_tag:
           Name: "Bastion_host"
           Project: Vprofile
           Owner: DevOps Team
