--- a/Ansible/bastion-instance.yml
+++ b/Ansible/bastion-instance.yml
@@ -36,7 +36,7 @@
             cidr_ip: "{{MYIP}}"
       register: BastionSG_out
 
-    - name: Creating Bastion Host
+    - Creating Bastion Host
       ec2:
         key_name: vprofile-key
         region: "{{region}}"
