--- a/Ansible/vpro-ec2-stack.yml
+++ b/Ansible/vpro-ec2-stack.yml
@@ -22,3 +22,35 @@
         dest: ./loginkey_vpro.pem
         mode: 0600
       when: vprokey_out.changed
+
+    - name: Create Security Group for load Balancer
+      ec2_group:
+        name: vproELB-sg
+        description: Allow port 80 from everywhere and all port within SG
+        vpc_id: "{{vpcid}}"
+        region: "{{region}}"
+        rule:
+          - proto: tcp
+            from_port: 80
+            to_port: 80
+            cidr_ip: 0.0.0.0/0
+      register: vproELBSG_out
+
+    - name: Create Security Group for Vprofile Stack
+      ec2_group:
+        name: vproStack-SG
+        description: Allow port 22 from everywhere and all port within SG
+        vpc_id: "{{vpcid}}"
+        region: "{{region}}"
+        purge_rules: no
+        rule:
+          - proto: tcp
+            from_port: 80
+            to_port: 80
+            group_id: "{{vproELBSG_out.group.id}}"
+
+          - proto: tcp
+            from_port: 22
+            to_port: 22
+            group_id: "{{BastionSGid}}"
+      register: vproELBSG_out
