--- a/Ansible/bastion-instance.yml
+++ b/Ansible/bastion-instance.yml
@@ -62,4 +62,4 @@
         path: vars/output_vars
         backup: yes
         block:
-          BastionSGid: {{BastionSG_out.group_id}}
+          BastionSGid: "{{BastionSG_out.group_id}}"
