--- a/Ansible/bastion-instance.yml
+++ b/Ansible/bastion-instance.yml
@@ -61,5 +61,5 @@
       blockinfile:
         path: vars/output_vars
         backup: yes
-        block:
+        block: |
           BastionSGid: "{{BastionSG_out.group_id}}"
