--- a/Ansible/vpro-ec2-stack.yml
+++ b/Ansible/vpro-ec2-stack.yml
@@ -53,4 +53,15 @@
             from_port: 22
             to_port: 22
             group_id: "{{BastionSGid}}"
-      register: vproELBSG_out
+      register: vproStackSG_out
+
+    - name: Update Security Group with its own SG id
+      ec2_group:
+        name: vproStack-sg
+        description: Allow port 22 from everywhere and all port within SG
+        vpc_id: "{{vpcid}}"
+        region: "{{region}}"
+        purge_rules: no
+        rule:
+          - proto: all
+            group_id: "{{vproStackSG_out.group_id}}"
