--- a/Ansible/vpro-ec2-stack.yml
+++ b/Ansible/vpro-ec2-stack.yml
@@ -29,7 +29,7 @@
         description: Allow port 80 from everywhere and all port within SG
         vpc_id: "{{vpcid}}"
         region: "{{region}}"
-        rule:
+        rules:
           - proto: tcp
             from_port: 80
             to_port: 80
@@ -43,7 +43,7 @@
         vpc_id: "{{vpcid}}"
         region: "{{region}}"
         purge_rules: no
-        rule:
+        rules:
           - proto: tcp
             from_port: 80
             to_port: 80
@@ -62,6 +62,6 @@
         vpc_id: "{{vpcid}}"
         region: "{{region}}"
         purge_rules: no
-        rule:
+        rules:
           - proto: all
             group_id: "{{vproStackSG_out.group_id}}"
