--- a/Ansible/provision-stack/rabbitmq.yml
+++ b/Ansible/provision-stack/rabbitmq.yml
@@ -27,13 +27,13 @@
 
     - name: Add an Apt signing key, uses whichever key is at the URL
       apt_key:
-        url: https://www.rabbitmq.com/rabbitmq-release-signing-key.asc
+        url: https://github.com/rabbitmq/signing-keys/releases/download/2.0/rabbitmq-release-signing-key.asc
         state: present
       tags:
         - package
 
     - apt_repository:
-        repo: deb http://www.rabbitmq.com/debian/ testing main
+        repo: deb https://packagecloud.io/rabbitmq/rabbitmq-server/ubuntu/ bionic main
         state: present
       tags:
         - package
