Full Stack is Ready

--- a/Ansible/provision-stack/rabbitmq.yml
+++ b/Ansible/provision-stack/rabbitmq.yml
@@ -58,7 +58,7 @@
     - name: Config setup
       copy:
         content: |
-          [{rabbit, [{loopback_users, []}]}].
+          [{rabbit, [{loopback_users, []}]}]
         dest: /etc/rabbitmq/rabbitmq.config
       notify:
         - Restart RMQ
